fix: Todos los tests de casas y anuncios de casa arreglados